# my-vibecoding-project

./: LICENSE  README.md
ccpd_alpr/: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
ccpd_alpr/ccpd_alpr/: __init__.py  constants.py  geometry.py  ocr_dataset.py  parser.py  pipeline.py  province_classifier.py  province_refiner.py  recognizer_model.py  service.py  tokenizer.py  utils.py
ccpd_alpr/data_demo/: meta.json
ccpd_alpr/data_demo/index/: test.jsonl  val.jsonl
ccpd_alpr/data_probe/: meta.json
ccpd_alpr/data_probe/index/: test.jsonl  train.jsonl
ccpd_alpr/scripts/: evaluate_end2end.py  evaluate_province_refine.py  infer.py  prepare_ccpd.py  sweep_province_policy.py  train_detector.py  train_province_classifier.py  train_recognizer.py
